# TrueLens

./: .gitignore  README.md  STREAMLIT_CLOUD_FIXES.md  app.py  pyproject.toml  requirements.txt  setup.py  test_app.py
data/: hash_database.json
modules/: ai_detection.py  deep_learning_detector.py  deepfake_detection.py  ml_detector.py  perceptual_hash.py  utils.py  video_processor.py
